feat(terminal): Switch to tokyonight colorscheme
Makes kitty and tmux use tokyonight colors.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # ZeroKnight's Kitty Config
 
-include onedark.conf
+include tokyonight_storm.conf
 
 # Font {{{1
 
@@ -69,4 +69,3 @@ kitty_mod ctrl+shift
 # }}}
 
 # vim: ft=conf foldmethod=marker
-
