--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,36 +85,24 @@ bind -T copy-mode-vi 'y' copy-pipe 'xsel -i -o -p | xsel -i -b'
 
 ### Theme Configuration
 
+source -q $HOME/.config/tmux/theme.tmux
+
 set -g status-interval 10
 set -g status-justify 'centre'
 
 # Left/Right Status Line and Messages
-set -g status-style 'fg=white,bg=#2C3341'
 set -g status-left " #[fg=yellow]#h#[fg=default] :: #[fg=#{?client_prefix,magenta,green}]#[bold]#S#[nobold]#{?session_grouped,#[fg=default].#[fg=cyan]#{session_group},} #[fg=cyan]╱#[fg=default] "
 set -g status-left-length 50
 set -g status-right "#[fg=cyan]╱#[fg=default] #(~/.config/tmux/loadavg) :: #[fg=blue]Up #(~/.config/tmux/uptime.py) #[fg=cyan]╱#[fg=blue] %a %b %d • %H:%M#[fg=default]"
 set -g status-right-length 70
-set -g message-style 'fg=#2C3341,bg=blue'
-set -g message-command-style 'fg=#2C3341,bg=green'
 
 # Windows
 setw -g window-status-format ' #[fg=colour011]#I:#[fg=#{?window_bell_flag,colour009,default}]#W#[fg=colour011]#F#[fg=default] '
 setw -g window-status-current-format ' #[fg=cyan]#I:#[fg=colour015]#W#[fg=cyan]#F#[fg=default] '
-setw -g window-status-style 'fg=default,bg=#323A4A'
-setw -g window-status-current-style 'fg=default,bg=#3C4759'
 setw -g window-status-bell-style 'bg=default'
-
-# Panes
-set -g display-panes-active-colour 'magenta'
-setw -g pane-border-style 'fg=green'
-setw -g pane-active-border-style 'fg=magenta'
-
-# Sets the style of the line-counter selections in copy-mode
-setw -g mode-style 'fg=black,bg=magenta'
 
 set -g clock-mode-colour 'blue'
 
 ### Load default sessions
 
 source -q $HOME/.config/tmux/sessions.tmux
-
