refactor(git): Always use LF line endings
I misunderstood the slightly confusing difference (and older answers on the
topic) in the relationship between these two settings. This setup *should*
really always use LF line endings.

--- a/.config/git/config
+++ b/.config/git/config
@@ -6,7 +6,8 @@
 [core]
     editor = nvim
     pager = less -S
-    autocrlf = input
+    autocrlf = false
+    eol = lf
 
 [alias]
     br = branch
