feat(kitty): Update kitty.conf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -32,6 +32,8 @@ url_style curly
 # Only strip trailing spaces when using rectangle selection
 strip_trailing_spaces smart
 
+show_hyperlink_targets yes
+
 # Bell {{{1
 
 enable_audio_bell yes
@@ -51,9 +53,19 @@ resize_in_steps yes
 
 inactive_text_alpha 1.0
 
+# Tab Bar {{{1
+
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 1.0
+
+# TODO: Custom style that mimics my tmux tabs
+tab_bar_style fade
+tab_bar_align center
+tab_activity_symbol +
+
 # Background {{{1
 
-background_opacity 1.0
+background_opacity 0.97
 dynamic_background_opacity yes
 
 # TODO: experiment
@@ -65,6 +77,18 @@ background_tint 0.85
 # Keybinds {{{1
 
 kitty_mod ctrl+shift
+
+map kitty_mod+F3 launch --type=tab glances
+
+# Vim-like multi copy/paste
+
+map kitty_mod+'>1>y copy_to_buffer 1
+map kitty_mod+'>2>y copy_to_buffer 2
+map kitty_mod+'>3>y copy_to_buffer 3
+
+map kitty_mod+'>1>p paste_from_buffer 1
+map kitty_mod+'>2>p paste_from_buffer 2
+map kitty_mod+'>3>p paste_from_buffer 3
 
 # }}}
 
