feat(nvim): Add plugin vim-test
Provides a nice test-runner interface that works for many languages.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -90,6 +90,12 @@ map kitty_mod+'>1>p paste_from_buffer 1
 map kitty_mod+'>2>p paste_from_buffer 2
 map kitty_mod+'>3>p paste_from_buffer 3
 
+# Misc {{{1
+
+allow_remote_control yes
+listen_on unix:${XDG_RUNTIME_DIR}/kitty_remote
+
 # }}}
+
 
 # vim: ft=conf foldmethod=marker
