chore(kitty): Change where kitty themes reside
Also set an ignore rule for everything other than my custom One Dark
theme.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ fonts/Iosevka/private-build-plans.toml
 
 ### Kitty
 /.config/kitty/bg.png
+/.config/kitty/themes/*
+!/.config/kitty/themes/onedark.conf
 
 ### bat
 /.config/bat/themes/
