refactor(ansible): Ignore errors on Suse `purge_and_lock`
Remove is not idempotent and will throw errors when trying to remove
packages that are not installed.

--- a/ansible/roles/software/tasks/repos.yml
+++ b/ansible/roles/software/tasks/repos.yml
@@ -86,6 +86,7 @@
       loop: "{{ purge_and_lock.Suse }}"
       register: zypper_remove
       changed_when: zypper_remove.rc == 0
+      ignore_errors: true
 
     - name: Add package locks
       ansible.builtin.command:
