fix(ansible): Assorted issues and omissions
These were discovered while trying to run the bootstrap playbook on
a WSL Ubuntu 20.04 instance:

- Fix conditional for `graphical` fact
- Missing `become` in Debian package purge
- Ensure apt keyrings directory exists
- Refresh apt repositories after adding
- Install mlocate instead of plocate on older Ubuntu distributions
- Lowest-common-denominator approach for sparse-checkout on old git
  versions (e.g. Ubuntu 20.04)
- Ensure themes directories exist when deploying Tokyo Night

--- a/ansible/roles/software/tasks/main.yml
+++ b/ansible/roles/software/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Check if running a graphical environment
   ansible.builtin.set_fact:
-    graphical: "{{ (ansible_env.DESKTOP_SESSION or ansible_env.WINDOWMANAGER or ansible_env.DISPLAY) is truthy }}"
+    graphical: "{{ lookup('ansible.builtin.env', 'DESKTOP_SESSION', 'WINDOWMANAGER', 'DISPLAY', default=False) is any }}"
   tags: always
 
 - name: Set up package repositories
