--- a/ansible/roles/software/tasks/repos.yml
+++ b/ansible/roles/software/tasks/repos.yml
@@ -42,6 +42,14 @@
     ansible.builtin.template:
       <<: *perms
   block:
+    - name: Ensure /etc/apt/keyrings exists
+      ansible.builtin.file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: "0755"
+        owner: root
+        group: root
+
     - name: Add GitHub-CLI repository
       vars:
         key_path: /etc/apt/keyrings/githubcli-archive-keyring.gpg
@@ -75,6 +83,10 @@
           ansible.builtin.template:
             src: apt_repo.list.j2
             dest: /etc/apt/sources.list.d/eza-community.list
+
+    - name: Refresh repositories
+      ansible.builtin.apt:
+        update_cache: true
 
 - name: Purge and lock unwanted packages (Suse)
   when: ansible_os_family == 'Suse'
