--- a/ansible/roles/nvim/defaults/main.yml
+++ b/ansible/roles/nvim/defaults/main.yml
@@ -1,7 +1,10 @@
-build_type: RelWithDebInfo
-clone_path: "{{ (src_dir, 'neovim') | path_join }}"
-clone_tag: nightly
-lazy_path: "{{ (data_dir, 'nvim', 'lazy', 'lazy.nvim') | path_join }}"
+nvim_config: "{{ (config_dir, 'nvim') | path_join }}"
+nvim_data: "{{ (data_dir, 'nvim') | path_join }}"
+build:
+  type: RelWithDebInfo
+  tag: nightly
+  path: "{{ (src_dir, 'neovim') | path_join }}"
+lazy_path: "{{ (nvim_data, 'lazy', 'lazy.nvim') | path_join }}"
 provider:
   python:
-    venv_root: "{{ (data_dir, 'nvim', 'pynvim-venvs') | path_join }}"
+    venv_root: "{{ (nvim_data, 'pynvim-venvs') | path_join }}"
