--- a/ansible/roles/nvim/tasks/make.yml
+++ b/ansible/roles/nvim/tasks/make.yml
@@ -1,13 +1,13 @@
 # vim: ft=yaml.ansible
 
-- name: Build Neovim nightly ({{ build_type }})
+- name: Build Neovim nightly ({{ build.type }})
   community.general.make:
-    chdir: "{{ clone_path }}"
+    chdir: "{{ build.path }}"
     params:
-      CMAKE_BUILD_TYPE: "{{ build_type }}"
+      CMAKE_BUILD_TYPE: "{{ build.type }}"
 
 - name: Install Neovim nightly
   become: true
   community.general.make:
-    chdir: "{{ clone_path }}"
+    chdir: "{{ build.path }}"
     target: install
