feat(ansible): Add play/tasks for installing upstream Kitty
Instead of installing Kitty from distro repositories, grab the latest
release from GitHub. Can do this on demand for updates with the
`kitty.yml` stub playbook.

Closes #36.

--- a/ansible/roles/software/tasks/desktop.yml
+++ b/ansible/roles/software/tasks/desktop.yml
@@ -5,8 +5,6 @@
   community.general.zypper:
     name:
       - keepassxc
-      - kitty
-      - kitty-shell-integration
       - firefox
       - speedcrunch
       - vlc
@@ -18,9 +16,14 @@
   ansible.builtin.apt:
     name:
       - keepassxc
-      - kitty
-      - kitty-doc
       - firefox
       - speedcrunch
       - vlc
   when: ansible_os_family == 'Debian'
+
+- name: Install Kitty terminal
+  ansible.builtin.import_tasks: kitty.yml
+  when: "'/usr/local/bin/kitty' is not file"
+  tags:
+    - shell
+    - kitty
