--- a/.config/git/config
+++ b/.config/git/config
@@ -1,10 +1,12 @@
+[include]
+    path = conf.enabled/delta.gitconfig
+
 [user]
     name = ZeroKnight
     email = xzeroknightx@gmail.com
     signingkey = 806D7D27AE1D33AA
 
 [core]
-    editor = nvim
     pager = less -S
     autocrlf = false
     eol = lf
@@ -82,22 +84,6 @@
         27,3 years ago,63,2 years 6 months ago,99,2 years ago,135,1 year 6 months ago,171,1 year ago,\
         207,6 months ago,217,5 months ago,223,4 months ago,227,3 months ago,220,2 months ago,214,1 month ago,\
         208,2 weeks ago,202,1 week ago,196
-
-[pager]
-    diff = delta
-    show = delta
-    log = delta
-    blame = delta
-    reflog = delta
-
-[interactive]
-    diffFilter = delta --color-only
-
-[delta]
-    features = decorations
-    line-numbers = true
-    hyperlinks = true
-    keep-plus-minus-markers = false
 
 [pretty]
     single = "format:%C(green)%<|(13)%h%C(reset) %s%C(bold)%C(magenta)%d%C(reset) %C(yellow)[%cd] %C(cyan)<%aN %aE>%C(reset)"
