--- a/.config/git/config
+++ b/.config/git/config
@@ -45,6 +45,9 @@
     guess = true
     workers = -1
 
+[clone]
+    filterSubmodules = true
+
 [diff]
     mnemonicPrefix = true
     tool = nvimdiff
@@ -53,8 +56,8 @@
     prune = true
     pruneTags = true
 
-[init]
-    templatedir = ~/.config/git/template_default
+[grep]
+    lineNumber = true
 
 [log]
     mailmap = true
