feat(kitty): Disable `read-*-ask` options

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -95,6 +95,9 @@ map kitty_mod+'>3>p paste_from_buffer 3
 allow_remote_control yes
 listen_on unix:${XDG_RUNTIME_DIR}/kitty_remote
 
+# The default "read-*-ask" behavior is *really* annoying in remote nvim
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+
 # }}}
 
 
