feat(ansible): Add package manager configuration
Just for openSUSE for now.

--- a/ansible/roles/software/tasks/main.yml
+++ b/ansible/roles/software/tasks/main.yml
@@ -5,6 +5,12 @@
     graphical: "{{ lookup('ansible.builtin.env', 'DESKTOP_SESSION', 'WINDOWMANAGER', 'DISPLAY', default=False) is any }}"
   tags: always
 
+- name: Configure package manager
+  ansible.builtin.import_tasks: pkgmgr.yml
+  tags:
+    - repo
+    - distro
+
 - name: Set up package repositories
   ansible.builtin.import_tasks: repos.yml
   tags:
