--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -5,6 +5,21 @@
   vars_files:
     - vars/main.yml
   tasks:
+    - name: Set facts about desktop/graphical environment
+      vars:
+        graphical_vars:
+          - WINDOWMANAGER
+          - WINDOW_MANAGER
+          - DISPLAY
+        desktop_vars:
+          - XDG_CURRENT_DESKTOP
+          - XDG_SESSION_DESKTOP
+          - DESKTOP_SESSION
+      ansible.builtin.set_fact:
+        graphical: "{{ lookup('ansible.builtin.env', *(desktop_vars + graphical_vars), default=False) is any }}"
+        desktop: "{{ lookup('ansible.builtin.env', *desktop_vars).split(',') | first }}"
+      tags: always
+
     - name: Ensure home directory structure
       ansible.builtin.import_role:
         name: home
