fix(ansible): Improve repo/package management
Strive to be more idempotent:
- Use `present` state instead of `latest`
- Leverage a handler to refresh repositories only when adding the extras

--- a/ansible/roles/software/tasks/desktop.yml
+++ b/ansible/roles/software/tasks/desktop.yml
@@ -3,17 +3,19 @@
 - name: Install desktop applications (Suse)
   become: true
   community.general.zypper:
+    disable_recommends: false
+    state: present
     name:
       - keepassxc
       - firefox
       - speedcrunch
       - vlc
-    state: latest
   when: ansible_os_family == 'Suse'
 
 - name: Install desktop applications (Debian)
   become: true
   ansible.builtin.apt:
+    state: present
     name:
       - keepassxc
       - firefox
