feat(lf): Add pistol previewer for lf
Pistol can be used as an addon replacement for lf's builtin previewer.
Overriding the builtin previewer to use, in my case, kitty for image
previews means that normal text file previews are no longer available.
Pistol can fill this gap. Additionally, pistol can be configured per
file/filetype, so I can have it just use my already configured `bat` or
even `jq` for JSON data.

An ansible task was added to download and install pistol.

--- a/ansible/roles/software/tasks/utils.yml
+++ b/ansible/roles/software/tasks/utils.yml
@@ -77,6 +77,35 @@
     depth: 1
   tags: shell
 
+- name: Install pistol for lf
+  vars:
+    repo: 'doronbehar/pistol'
+    bin_file: "pistol-static-linux-{{ ansible_architecture }}"
+  tags: shell
+  block:
+    - name: Get latest pistol release
+      ansible.builtin.uri:
+        url: "https://api.github.com/repos/{{ repo }}/releases/latest"
+        method: GET
+      register: pistol_release
+
+    - name: Download latest pistol release
+      become: true
+      ansible.builtin.get_url:
+        url: "{{ item.src.browser_download_url }}"
+        dest: "{{ ('/usr/local', item.dest) | path_join }}"
+        mode: "{{ item.mode }}"
+      loop:
+        - src: "{{ pistol_release.json.assets | selectattr('name', 'eq', bin_file) | first }}"
+          dest: bin/pistol
+          mode: "0755"
+        - src: "{{ pistol_release.json.assets | selectattr('name', 'eq', 'pistol.1') | first }}"
+          dest: share/man/man1/pistol.1
+          mode: "0644"
+      loop_control:
+        label: "{{ item.src.name }}"
+
+
 - name: Install Tokyo Night Theme
   vars:
     tokyonight:
