feat(lf): Minimal bat style for pistol preview

--- a/.config/pistol/pistol.conf
+++ b/.config/pistol/pistol.conf
@@ -1,2 +1,2 @@
-text/* bat --paging=never --color=always %pistol-filename%
+text/* bat --paging=never --color=always --style=numbers,changes %pistol-filename%
 application/json sh: jq --color-output '.' %pistol-filename%
