--- a/ansible/roles/home/tasks/main.yml
+++ b/ansible/roles/home/tasks/main.yml
@@ -7,6 +7,7 @@
     state: directory
   loop:
     - .config
+    - .config/user-tmpfiles.d
     - .local/bin
     - .local/opt
     - .local/share
@@ -36,10 +37,10 @@
 - name: Redirect KWin cache to tmpfs
   ansible.builtin.copy:
     src: files/.config/user-tmpfiles.d/kwin-cache.conf
-    dest: "{{ (config_dir, 'user-tmpfiles.d') | path_join }}"
+    dest: "{{ (config_dir, 'user-tmpfiles.d', 'kwin-cache.conf') | path_join }}"
     mode: "0644"
   when: desktop == 'KDE'
-  tags: desktop
+  tags: desktop, kde
 
 - name: Deploy dotfiles
   block:
