feat(kitty): Update keybinds
- Replace `glances` bind with `btop`
- Add bind for `new_window_with_cwd`

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -78,7 +78,8 @@ background_tint 0.85
 
 kitty_mod ctrl+shift
 
-map kitty_mod+F3 launch --type=tab glances
+map kitty_mod+F3 launch --type=tab btop
+map kitty_mod+D new_window_with_cwd
 
 # Vim-like multi copy/paste
 
