feat(ansible): Set libzypp minimum download speed

--- a/ansible/roles/software/tasks/pkgmgr.yml
+++ b/ansible/roles/software/tasks/pkgmgr.yml
@@ -64,3 +64,10 @@
         path: "{{ config }}"
         regexp: "commit\\.downloadMode\\s*="
         line: "commit.downloadMode = DownloadInAdvance"
+
+    # Don't waste time on slow connections
+    - name: Set minimum download speed to 25KB/s
+      ansible.builtin.lineinfile:
+        path: "{{ config }}"
+        regexp: "download\\.min_download_speed\\s*=\\s*\\d*"
+        line: "download.min_download_speed = {{ 1024 * 25 }}"
