--- a/fonts/Iosevka/iosevka-zero-build-plans.toml
+++ b/fonts/Iosevka/iosevka-zero-build-plans.toml
@@ -5,23 +5,23 @@
 family = "Iosevka Zero"
 spacing = "normal"
 serifs = "sans"
-no-cv-ss = true
-export-glyph-names = true
+noCvSs = true
+exportGlyphNames = true
 
 [buildPlans.iosevka-zero.variants.design]
 capital-g = "toothless-corner-serifless-hooked"
 capital-z = "straight-serifless-with-crossbar"
-f = "flat-hook"
-i = "tailed-serifed"
-l = "tailed-serifed"
+f = "flat-hook-serifless"
+i = "serifed-flat-tailed"
+l = "serifed-flat-tailed"
 t = "flat-hook"
 z = "straight-serifless-with-crossbar"
-eszet = "sulzbacher-descending"
+eszet = "sulzbacher-descending-serifless"
 lower-lambda = "straight-turn"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
 one = "base"
-seven = "straight-crossbar"
+seven = "straight-serifless-crossbar"
 number-sign = "slanted"
 ampersand = "upper-open"
 percent = "rings-continuous-slash"
