feat: Add home directory log rotation setup
Motivation: Neovim logs are unbound and can get huge, particularly
`lsp.log`. But it'd be nice to control all Neovim logs, and any other
logs that might grow unbound in my home directory.

Mirroring most distro's logrotate setup, I now have a logrotate.d
directory that I can place logrotate rules within, as well as an
accompanying logrotate systemd service and timer. Finally, a new ansible
task set can ensure that this and other services/timers are enabled and
started.

--- a/ansible/roles/home/tasks/main.yml
+++ b/ansible/roles/home/tasks/main.yml
@@ -61,3 +61,8 @@
       loop: "{{ link_targets.files }}"
       loop_control:
         label: "{{ item.path }}"
+
+- name: Set up user level systemd
+  ansible.builtin.import_tasks: systemd.yml
+  tags:
+    - systemd
