feat(ansible): Add a default variable for nvim binary

--- a/ansible/roles/nvim/defaults/main.yml
+++ b/ansible/roles/nvim/defaults/main.yml
@@ -1,3 +1,4 @@
+nvim_bin: /usr/local/bin/nvim
 nvim_config: "{{ (config_dir, 'nvim') | path_join }}"
 nvim_data: "{{ (data_dir, 'nvim') | path_join }}"
 build:
