--- a/ansible/roles/nvim/tasks/plugins.yml
+++ b/ansible/roles/nvim/tasks/plugins.yml
@@ -17,7 +17,7 @@
 - name: Sync nvim plugins
   ansible.builtin.command:
     argv:
-      - /usr/local/bin/nvim
+      - "{{ nvim_bin }}"
       - --headless
       - +Lazy! sync
       - +qa
